# microservice-architecture

./: .gitignore  README.md  docker-compose copy.yml  docker-compose.production.yml  docker-compose.yml  microservice-description.odg
api-gateway/: Dockerfile  Program.cs  Startup.cs  api-gateway.csproj
api-gateway/Properties/: launchSettings.json
api-gateway/configuration/: ocelot.json
batch-service/: Constants.cs  Dockerfile  PolicyManager.cs  RabbitMQClient.cs  RedisManager.cs  Startup.cs  batch-webservice.csproj
batch-service/Controllers/: BatchController.cs
batch-service/CustomHandlers/: CustomErrorMiddleware.cs  MaintainCorsMiddleware.cs
batch-service/Extensions/: ServiceConfigExtensions.cs  ServiceDiscoveryRegistrationExtensions.cs
batch-service/Managers/: MessageConsumer.cs  MessagePublisher.cs  (+3 more)
batch-webservice/: Batch.cs  BatchExtension.cs  Dockerfile  Program.cs  RabbitMQClient.cs  Startup.cs  WeatherForecast.cs  batch-webservice.csproj
client/: Dockerfile  HttpService.cs  Program.cs  WebSocketService.cs  client.csproj
redis-service/: Cargo.toml  Dockerfile
redis-service/src/: batch_processor.rs  main.rs  mqtt_consumer.rs  mqtt_message.rs  mqtt_publisher.rs  redis_manager.rs  variables.rs
roundtrip-service/: Dockerfile  go.mod  go.sum  main.go  roundtripModel.go  serviceRegistration.go
service/: Cargo.toml  Dockerfile
webapi/: go.mod  go.sum  hub.go  main.go
webservice/: batchModel.go  client.go  go.mod  go.sum  main.go  postModel.go
websocket-service/: Dockerfile  go.mod  go.sum  main.go
websocketservice/: Dockerfile  main.go
(+40 files in other folders)
