[package]
authors = ["Oscar <oscar.f.larsson@gmail.com>"]
edition = "2018"
name = "service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = {version = "0.3", default-features = false}
bincode = {version = "1.0"}
chrono = {version = "0.4"}
redis = {version = "0.17.0"}
serde = {version = "1.0", features = ["derive"]}
serde_repr = "0.1"
serde_json = {version = "1.0"}
url = {version = "1.7.2"}
